fixed vertical alignment of label in SelectionHeader

--- a/src/SelectionHeader.css
+++ b/src/SelectionHeader.css
@@ -1,6 +1,7 @@
 .SelectionHeader-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 50px 0px 50px 0px;
 }
 
